# findout

./: .gitignore  README.md  pyproject.toml  requirements.txt
cli/: findout.py  self-verify.py
examples/: basic.py  with_config.py
plugins/hermes/: __init__.py  plugin.yaml
references/: pipeline-design-rationale.md
skills/findout/: SKILL.md
skills/findout/references/: plugin-setup.md
skills/self-verify-pipelines/: SKILL.md
src/findout/: __init__.py  cli.py  config.py  consistency.py  gate.py  hybrid.py  llm.py  pipeline.py  result.py
src/findout/stages/: extract.py  generate.py  predict.py  rewrite.py  search.py
src/self_verify/: cli.py  config.py  consistency.py  gate.py  hybrid.py  pipeline.py  result.py  search_client.py
src/self_verify/stages/: extract.py  generate.py  predict.py  rewrite.py  search.py
tests/: test_all.py  test_hermes_plugin.py
