[project]
name = "findout"
version = "0.2.0"
description = "Deterministic, single-model, multi-pass verification pipelines for LLM outputs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "findout contributors", email = "oss@nousresearch.com" },
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

keywords = [
    "llm", "verification", "fact-checking", "hallucination",
    "self-verify", "evidence-prediction", "ai-safety",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "ddgs>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/akashmukherjee333/findout"
Repository = "https://github.com/akashmukherjee333/findout"
Documentation = "https://github.com/akashmukherjee333/findout#readme"
Issues = "https://github.com/akashmukherjee333/findout/issues"

[project.scripts]
findout = "findout.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.coverage.run]
source = ["findout"]
